@@ -87,7 +87,7 @@ jansi.version=1.9
 asm.version=3.3.1
 snappy-java.version=1.1.1.3
 tez.version=0.7.0
-parquet-pig-bundle.version=1.2.3
+parquet-pig-bundle.version=1.9.0
 snappy.version=0.2
 leveldbjni.version=1.8
 curator.version=2.6.0
